--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Jogo</h3>
             <p class="projects__row-content-desc">
-              Jogo em andamento.
+              Em andamento.
             </p>
             <a
               href="./project-2.html"
